option(
	'build_docs',
	type: 'combo',
	choices: ['enabled', 'disabled', 'auto'],
	value: 'auto',
	description: 'build documentation, requires scdoc'
	)

option(
	'test',
	type: 'boolean',
	value: true,
	description: 'run tests'
	)

option(
  'package_subdir',
  type: 'string',
  value: '',
  description: 'Subdirectory to append to all installed files, for use as subproject'
)

